# solo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  claude-solution.md  pi-solution.md  pyproject.toml  requirements.md
.claude/: settings.json
.claude/agents/: solo-reviewer.md
.claude/commands/: concept.md  decision.md
docs/: README.md  architecture.md  requirements.md  status.md  walkthrough.html
docs/concepts/: README.md  evaluating-llm-outputs.md  llm-api-basics.md  observability-trace-table.md  structured-outputs.md
docs/decisions/: 0001-trace-write-timing.md  0002-llm-module-split.md  0003-classifier-on-entries-vs-side-table.md  0004-llmclient-connection-lifecycle.md  0005-heuristic-only-ranking.md  0006-skip-summary-auto-grading.md  0007-drop-is-hard-delete.md  0008-mention-extraction-is-regex.md  0009-brain-sync-via-github-repo.md  0009-kbos-sync-via-github-repo.md  0010-multimodal-capture-and-soul.md  README.md
docs/superpowers/plans/: 2026-05-05-telegram-capture.md  2026-05-09-llm-client-and-trace.md  2026-05-10-classifier.md  (+5 more)
evals/: classify.jsonl
scripts/: check_ssl.py  eval.py
src/solo/: __init__.py  __main__.py  bot.py  capture.py  classifier.py  coach.py  commands.py  db.py  evals.py  llm.py  media.py  mentions.py  prompts.py  rank.py  sync.py  trace.py
tests/: test_bot.py  test_classifier.py  test_classifier_live.py  test_commands.py  test_db.py  test_evals.py  test_llm.py  test_llm_live.py  test_media.py  test_mentions.py  test_prompts.py  test_rank.py  test_sync.py  test_trace.py
(+11 files in other folders)
