[project]
name = "solo"
version = "0.1.0"
description = "Personal thinking companion"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot>=21.0",
  "openai>=1.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solo"]
